--- a/_includes/photos.html
+++ b/_includes/photos.html
@@ -11,55 +11,55 @@
 <body>
 <div class="photo-gallery">
   <div class="photo-grid">
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%201.jpg"><img src="/particle_site/assets/img/File%201.jpg" alt="Photo 1"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%202.jpg"><img src="/particle_site/assets/img/File%202.jpg" alt="Photo 2"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%203.jpg"><img src="/particle_site/assets/img/File%203.jpg" alt="Photo 3"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%204.jpg"><img src="/particle_site/assets/img/File%204.jpg" alt="Photo 4"></a>
+    <a data-lightbox="photos" href="/assets/img/File%201.jpg"><img src="/assets/img/File%201.jpg" alt="Photo 1"></a>
+    <a data-lightbox="photos" href="/assets/img/File%202.jpg"><img src="/assets/img/File%202.jpg" alt="Photo 2"></a>
+    <a data-lightbox="photos" href="/assets/img/File%203.jpg"><img src="/assets/img/File%203.jpg" alt="Photo 3"></a>
+    <a data-lightbox="photos" href="/assets/img/File%204.jpg"><img src="/assets/img/File%204.jpg" alt="Photo 4"></a>
 
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%205.jpg"><img src="/particle_site/assets/img/File%205.jpg" alt="Photo 5"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%206.jpg"><img src="/particle_site/assets/img/File%206.jpg" alt="Photo 6"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%207.jpg"><img src="/particle_site/assets/img/File%207.jpg" alt="Photo 7"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%208.jpg"><img src="/particle_site/assets/img/File%208.jpg" alt="Photo 8"></a>
+    <a data-lightbox="photos" href="/assets/img/File%205.jpg"><img src="/assets/img/File%205.jpg" alt="Photo 5"></a>
+    <a data-lightbox="photos" href="/assets/img/File%206.jpg"><img src="/assets/img/File%206.jpg" alt="Photo 6"></a>
+    <a data-lightbox="photos" href="/assets/img/File%207.jpg"><img src="/assets/img/File%207.jpg" alt="Photo 7"></a>
+    <a data-lightbox="photos" href="/assets/img/File%208.jpg"><img src="/assets/img/File%208.jpg" alt="Photo 8"></a>
 
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%209.jpg"><img src="/particle_site/assets/img/File%209.jpg" alt="Photo 9"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2010.jpg"><img src="/particle_site/assets/img/File%2010.jpg" alt="Photo 10"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2011.jpg"><img src="/particle_site/assets/img/File%2011.jpg" alt="Photo 11"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2012.jpg"><img src="/particle_site/assets/img/File%2012.jpg" alt="Photo 12"></a>
+    <a data-lightbox="photos" href="/assets/img/File%209.jpg"><img src="/assets/img/File%209.jpg" alt="Photo 9"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2010.jpg"><img src="/assets/img/File%2010.jpg" alt="Photo 10"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2011.jpg"><img src="/assets/img/File%2011.jpg" alt="Photo 11"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2012.jpg"><img src="/assets/img/File%2012.jpg" alt="Photo 12"></a>
 
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2013.jpg"><img src="/particle_site/assets/img/File%2013.jpg" alt="Photo 13"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2014.jpg"><img src="/particle_site/assets/img/File%2014.jpg" alt="Photo 14"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2015.jpg"><img src="/particle_site/assets/img/File%2015.jpg" alt="Photo 15"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2016.jpg"><img src="/particle_site/assets/img/File%2016.jpg" alt="Photo 16"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2013.jpg"><img src="/assets/img/File%2013.jpg" alt="Photo 13"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2014.jpg"><img src="/assets/img/File%2014.jpg" alt="Photo 14"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2015.jpg"><img src="/assets/img/File%2015.jpg" alt="Photo 15"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2016.jpg"><img src="/assets/img/File%2016.jpg" alt="Photo 16"></a>
 
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2017.jpg"><img src="/particle_site/assets/img/File%2017.jpg" alt="Photo 17"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2018.jpg"><img src="/particle_site/assets/img/File%2018.jpg" alt="Photo 18"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2019.jpg"><img src="/particle_site/assets/img/File%2019.jpg" alt="Photo 19"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2020.jpg"><img src="/particle_site/assets/img/File%2020.jpg" alt="Photo 20"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2017.jpg"><img src="/assets/img/File%2017.jpg" alt="Photo 17"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2018.jpg"><img src="/assets/img/File%2018.jpg" alt="Photo 18"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2019.jpg"><img src="/assets/img/File%2019.jpg" alt="Photo 19"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2020.jpg"><img src="/assets/img/File%2020.jpg" alt="Photo 20"></a>
 
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2021.jpg"><img src="/particle_site/assets/img/File%2021.jpg" alt="Photo 21"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2022.jpg"><img src="/particle_site/assets/img/File%2022.jpg" alt="Photo 22"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2023.jpg"><img src="/particle_site/assets/img/File%2023.jpg" alt="Photo 23"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2024.jpg"><img src="/particle_site/assets/img/File%2024.jpg" alt="Photo 24"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2021.jpg"><img src="/assets/img/File%2021.jpg" alt="Photo 21"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2022.jpg"><img src="/assets/img/File%2022.jpg" alt="Photo 22"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2023.jpg"><img src="/assets/img/File%2023.jpg" alt="Photo 23"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2024.jpg"><img src="/assets/img/File%2024.jpg" alt="Photo 24"></a>
 
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2025.jpg"><img src="/particle_site/assets/img/File%2025.jpg" alt="Photo 25"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2026.jpg"><img src="/particle_site/assets/img/File%2026.jpg" alt="Photo 26"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2027.jpg"><img src="/particle_site/assets/img/File%2027.jpg" alt="Photo 27"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2028.jpg"><img src="/particle_site/assets/img/File%2028.jpg" alt="Photo 28"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2025.jpg"><img src="/assets/img/File%2025.jpg" alt="Photo 25"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2026.jpg"><img src="/assets/img/File%2026.jpg" alt="Photo 26"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2027.jpg"><img src="/assets/img/File%2027.jpg" alt="Photo 27"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2028.jpg"><img src="/assets/img/File%2028.jpg" alt="Photo 28"></a>
 
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2029.jpg"><img src="/particle_site/assets/img/File%2029.jpg" alt="Photo 29"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2030.jpg"><img src="/particle_site/assets/img/File%2030.jpg" alt="Photo 30"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2031.jpg"><img src="/particle_site/assets/img/File%2031.jpg" alt="Photo 31"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2032.jpg"><img src="/particle_site/assets/img/File%2032.jpg" alt="Photo 32"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2029.jpg"><img src="/assets/img/File%2029.jpg" alt="Photo 29"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2030.jpg"><img src="/assets/img/File%2030.jpg" alt="Photo 30"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2031.jpg"><img src="/assets/img/File%2031.jpg" alt="Photo 31"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2032.jpg"><img src="/assets/img/File%2032.jpg" alt="Photo 32"></a>
 
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2033.jpg"><img src="/particle_site/assets/img/File%2033.jpg" alt="Photo 33"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2034.jpg"><img src="/particle_site/assets/img/File%2034.jpg" alt="Photo 34"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2035.jpg"><img src="/particle_site/assets/img/File%2035.jpg" alt="Photo 35"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2036.jpg"><img src="/particle_site/assets/img/File%2036.jpg" alt="Photo 36"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2033.jpg"><img src="/assets/img/File%2033.jpg" alt="Photo 33"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2034.jpg"><img src="/assets/img/File%2034.jpg" alt="Photo 34"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2035.jpg"><img src="/assets/img/File%2035.jpg" alt="Photo 35"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2036.jpg"><img src="/assets/img/File%2036.jpg" alt="Photo 36"></a>
 
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2037.jpg"><img src="/particle_site/assets/img/File%2037.jpg" alt="Photo 37"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2038.jpg"><img src="/particle_site/assets/img/File%2038.jpg" alt="Photo 38"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2039.jpg"><img src="/particle_site/assets/img/File%2039.jpg" alt="Photo 39"></a>
-    <a data-lightbox="photos" href="/particle_site/assets/img/File%2040.jpg"><img src="/particle_site/assets/img/File%2040.jpg" alt="Photo 40"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2037.jpg"><img src="/assets/img/File%2037.jpg" alt="Photo 37"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2038.jpg"><img src="/assets/img/File%2038.jpg" alt="Photo 38"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2039.jpg"><img src="/assets/img/File%2039.jpg" alt="Photo 39"></a>
+    <a data-lightbox="photos" href="/assets/img/File%2040.jpg"><img src="/assets/img/File%2040.jpg" alt="Photo 40"></a>
   </div>
 </div>
 
