--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
         ·
         <a class="link" href="/#projects">Projects</a>
         ·
-        <a class="link" href="/Jon_Albo_Resume_DS.pdf">Resume</a>
+        <a class="link" href="/JonAlbo_Resume.pdf">Resume</a>
         ·
         <a class="link" href="https://patents.google.com/?inventor=Jon+ALBO">Patents</a>
         ·
