--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,8 +1,8 @@
 <div class="user-details">
-  <h1> Featured Projects - Coming Soon! </h1>
+  <h1> Featured Projects - More Coming Soon! </h1>
 </div>
 
-<!--
+
 <div class="user-projects">
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
 
@@ -10,13 +10,18 @@
     <img alt="wrting" src="{{ "/assets/img/kaitlyn-baker-vZJdYl5JVXY-unsplash.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Blog on towardsdatascience.com </h3>
-    <p>Medium's <i>Towards Data Science</i> is a great place to share wisdom.
-      Here you'll find my articles on data science experiences and best practices.</p>
-      <p align="center"><a class="project-link" href="https://towardsdatascience.com/@d_haitz">Check it out</a></p>
+    <h3> SPOTs for low-cost, high-throughput biological and chemical reactions </h3>
+    <p>The SPOTs platform is a new generation of tools for scientist and researchers to perform more experiments for less cost.
+      This platform allows scientists run experiments and answer questions previously thought to be impossible to test.
+	During my PhD, I used this tool to generate data in fields across life sciences and medicine that exceeded what was previously able to be collected
+	over the past 100 years!</p>
+      <p align="center">
+		  <a class="project-link" href="https://drive.google.com/file/d/1DtW1S80Kb11yYCSj24XXV3H0U6SK5ied/view?usp=sharing">Watch SPOTs make 1000 combinations of 4 liquids in 15 minutes!</a>
+	      <a class="project-link" href="https://www.biorxiv.org/content/10.1101/2024.01.17.575712v1.full">Check out our paper on SPOTs!</a>
+	  </p>
   </div>
 </div>
-
+<!--
 <div class="user-projects">
 
   <div class="images-right">
