--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
 
   <div class="images-left">
-    <img alt="wrting" src="{{ "/assets/img/kaitlyn-baker-vZJdYl5JVXY-unsplash.jpg" | prepend: site.baseurl }}" />
+    <img alt="wrting" src="{{ "/assets/img/Picture3.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> SPOTs for low-cost, high-throughput biological and chemical reactions </h3>
