--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -13,8 +13,8 @@
     <h3> SPOTs for low-cost, high-throughput biological and chemical reactions </h3>
     <p>The SPOTs platform is a new generation of tools for scientist and researchers to perform more experiments for less cost.
       This platform allows scientists run experiments and answer questions previously thought to be impossible to test.
-	During my PhD, I used this tool to generate data in fields across life sciences and medicine that exceeded what was previously able to be collected
-	over the past 100 years!</p>
+	During my PhD, I used this tool to generate more data across life sciences and medicine that exceeded what was previously able to be collected
+	over the past 100 years combined!</p>
       <p align="center">
 		  <a class="project-link" href="https://drive.google.com/file/d/1DtW1S80Kb11yYCSj24XXV3H0U6SK5ied/view?usp=sharing">Watch SPOTs make 1000 combinations of 4 liquids in 15 minutes!</a>
 	      <a class="project-link" href="https://www.biorxiv.org/content/10.1101/2024.01.17.575712v1.full">Check out our paper on SPOTs!</a>
