--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -21,20 +21,23 @@
 	  </p>
   </div>
 </div>
-<!--
+
 <div class="user-projects">
 
   <div class="images-right">
-    <img alt="galaxy" src="{{ "/assets/img/galaxy.jpg" | prepend: site.baseurl }}" />
+    <img alt="galaxy" src="{{ "/assets/img/Picture2.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-left">
-    <h3>Interactive 3D Graph</h3>
-    <p>Discover the structure of Wikipedia by flying around like you're in a spaceship.
-      Based on public page link data and free graph software.</p>
-      <p align="center"><a class="project-link" href="https://dhaitz.github.io/graph-visualization/#/galaxy/wikipedia?cx=-705&cy=-9206&cz=-9978&lx=0.4772&ly=0.7270&lz=-0.4743&lw=0.1367&ml=450&s=1.75&l=1&v=500_000_links">Check it out</a></p>
+    <h3>Machine Learning X SPOTs = new drugs to treat bacterial infections</h3>
+    <p>Once we were able to run 10,000+ experinments with SPOTs, we pulled all of the existing drug combination data from previous research studies.
+		We trained a machine learning model on this data, and used it to predict what new drug combinations might be effective at killing bacteria.
+		This project was a collaboration with a group at University of Michigan Medicine, where we doubled all of the data available from research studies within the past 30 years in a single day with SPOTs.
+		We discovered 10 novel drug combinations that are being explored for use in the clinic to treat humans!
+	</p>
+      <p align="center"><a class="project-link" href="https://www.biorxiv.org/content/10.1101/2024.11.25.625231v1.full">Check out our machine learning X SPOTs paper!</a></p>
   </div>
 </div>
-
+<!--
 <div class="user-projects">
   <div class="images-left">
     <img alt="particle-physics" src="{{ "/assets/img/s-bahn-hamburg.gif" | prepend: site.baseurl }}"/>
