--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -25,7 +25,7 @@
 <div class="user-projects">
 
   <div class="images-right">
-    <img alt="galaxy" src="{{ "/assets/img/Picture2.jpg" | prepend: site.baseurl }}" />
+    <img alt="galaxy" src="{{ "/assets/img/Picture2.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-left">
     <h3>Machine Learning X SPOTs = new drugs to treat bacterial infections</h3>
