--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -16,7 +16,7 @@
 	During my PhD, I used this tool to generate more data across life sciences and medicine that exceeded what was previously able to be collected
 	over the past 100 years combined!</p>
       <p align="center">
-		  <a class="project-link" href="https://drive.google.com/file/d/1DtW1S80Kb11yYCSj24XXV3H0U6SK5ied/view?usp=sharing">Watch SPOTs make 1000 combinations of 4 liquids in 15 minutes!</a>
+		  <a class="project-link" href="https://drive.google.com/file/d/1DtW1S80Kb11yYCSj24XXV3H0U6SK5ied/view?usp=sharing">Watch us use SPOTs to make 1000 combinations of 4 liquids in minutes!</a>
 	      <a class="project-link" href="https://www.biorxiv.org/content/10.1101/2024.01.17.575712v1.full">Check out our paper on SPOTs!</a>
 	  </p>
   </div>
