--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -28,7 +28,7 @@
     <img alt="galaxy" src="{{ "/assets/img/Picture2.png" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-left">
-    <h3>Machine Learning X SPOTs = new drugs to treat bacterial infections</h3>
+    <h3>Machine Learning + SPOTs = new drugs to treat bacterial infections</h3>
     <p>Once we were able to run 10,000+ experinments with SPOTs, we pulled all of the existing drug combination data from previous research studies.
 		We trained a machine learning model on this data, and used it to predict what new drug combinations might be effective at killing bacteria.
 		This project was a collaboration with a group at University of Michigan Medicine, where we doubled all of the data available from research studies within the past 30 years in a single day with SPOTs.
