--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -37,24 +37,24 @@
       <p align="center"><a class="project-link" href="https://www.biorxiv.org/content/10.1101/2024.11.25.625231v1.full">Check out our machine learning X SPOTs paper!</a></p>
   </div>
 </div>
-<!--
+
 <div class="user-projects">
   <div class="images-left">
-    <img alt="particle-physics" src="{{ "/assets/img/s-bahn-hamburg.gif" | prepend: site.baseurl }}"/>
+    <img alt="particle-physics" src="{{ "/assets/img/chemreactionsSPOTs.gif" | prepend: site.baseurl }}"/>
   </div>
   <div class="contents-right">
     <h3> Public Data Visualizations</h3>
-    <p>Occasionally, I create visualizations of public data, e.g. maps, traffic data or election results.
-	    This includes interactive websites for e.g. town names or carsharing prices.
+    <p>My most ambitious project stemmed from the idea of pushing the limits of SPOTs and questioning how we can discover new drug and chemical formulations.
+		Here, we ran 150,000 experiments in a month, 10,000 times more than what would commonly be done in a chemistry lab. 
+		We discovered thousands of new reactions from a chemical process that's been known since 1890. 
+		This chemical process was previously thought to be exhausted of all potential reactions that could reasonably be produced, until we levaraged SPOTs to prove otherwise.
+		The gif here represents just ~1/50th of the total data we collected, where we leverage changes in colors to represent complex chemical reactions.
+		We then uncover the chemistry behind these color changes to discover new reactions.
+		A thoroughly described data workflow and written manuscript is in the works to share here!
      </p>
-    <p align="center">
-      <a class="project-link" href="https://instagram.com/dhaitz_data">Dataviz Instagram</a>
-      <a class="project-link" href="https://ortsnamen.herokuapp.com">Town name suffix maps</a>
-      <a class="project-link" href="https://carsharing-hh.herokuapp.com">Hamburg carsharing price comparison</a>
-    </p>
   </div>
 </div>
-
+<!--
 <div class="user-projects">
   <div class="images-right">
     <img alt="machine-learning-visualization" src="{{ "/assets/img/ml_visualization.gif" | prepend: site.baseurl }}" />
