--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,9 +4,9 @@
        style="float: left; width: 100%; max-width: 500px; height: auto; margin-right: 20px; margin-bottom: 10px; border-radius: 8px;">
 
   <p>
-    <strong style="font-size: 2em;">Hello!</strong><br><div style="height: 0.5em;"></div>
-    <strong>I'm Jon, a data scientist and project manager based out of Orlando, FL. Thanks for stopping by! I’m currently working on revamping my website, building out new sections describing specific projects and workflows. </strong><br><div style="height: 0.75em;"></div>
-    <strong>In the meantime.... a little background on me:</strong><br><div style="height: 0.75em;"></div>
+    <strong style="font-size: 2em;">Hello! 👋 </strong><br><div style="height: 0.5em;"></div>
+    <strong>I'm Jon, a data scientist and project manager based out of Orlando, FL. Thanks for stopping by! I’m currently working on building out new sections describing specific projects and workflows. </strong><br><div style="height: 0.75em;"></div>
+    <strong>In the meantime.. a little background on me:</strong><br><div style="height: 0.75em;"></div>
     <strong>I love to solve difficult problems. I earned my PhD in biomedical engineering in August 2025 by developing a physical tool, called SPOTs, to help scientists and researchers be more effective and efficient in solving complex problems.</strong><br><div style="height: 0.75em;"></div>
     <strong>SPOTs was built for bench scientists to test anywhere from 100 to over 100,000 reactions to discover new drug combinations, create new drug molecules, and streamline clinical assays, all for 10,000X less cost than available methods.</strong><br><div style="height: 0.75em;"></div>
     <strong>Since biological and chemical reactions were run directly on SPOTs itself and it was designed to be broadly applicable across science, I had to develop ways to process and analyze the thousands of experiments we were quickly generating. This often came in the form of images, where I would look for information such as living cells being killed by drugs, or color changes when I modified a chemical compound.</strong><br><div style="height: 0.75em;"></div>
