--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
         ·
         <a class="link" href="/photography">Photography</a>
         ·
-        <a class="link" href="/news">In the News</a>
+        <a class="link" href="/news">Featured In</a>
       </div>
   </div>
   <a class="down" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
