--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -34,7 +34,7 @@
 		This project was a collaboration with a group at University of Michigan Medicine, where we doubled all of the data available from research studies within the past 30 years in a single day with SPOTs.
 		We discovered 10 novel drug combinations that are being explored for use in the clinic to treat humans!
 	</p>
-      <p align="center"><a class="project-link" href="https://www.biorxiv.org/content/10.1101/2024.11.25.625231v1.full">Check out our machine learning X SPOTs paper!</a></p>
+      <p align="center"><a class="project-link" href="https://www.biorxiv.org/content/10.1101/2024.11.25.625231v1.full">Check out our machine learning + SPOTs paper!</a></p>
   </div>
 </div>
 
