--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -43,7 +43,7 @@
     <img alt="particle-physics" src="{{ "/assets/img/chemreactionsSPOTs.gif" | prepend: site.baseurl }}"/>
   </div>
   <div class="contents-right">
-    <h3> Public Data Visualizations</h3>
+    <h3>Decoding large datasets created through SPOTs</h3>
     <p>My most ambitious project stemmed from the idea of pushing the limits of SPOTs and questioning how we can discover new drug and chemical formulations.
 		Here, we ran 150,000 experiments in a month, 10,000 times more than what would commonly be done in a chemistry lab. 
 		We discovered thousands of new reactions from a chemical process that's been known since 1890. 
